aws-IaC/challenges/challenge2/challenge2-infra.yml
Parameters:

  EnvironmentName:
      Description: An environment name that will be prefixed to resource names
      Type: String

  VpcCIDR: 
      Description: Please enter the IP range (CIDR notation) for this VPC
      Type: String
      Default: 10.0.0.0/16

  PublicSubnetCIDR:
      Description: Please enter the IP range (CIDR notation) for the public subnet
      Type: String
      Default: 10.0.1.0/24

  PrivateSubnetCIDR:
      Description: Please enter the IP range (CIDR notation) for the private subnet
      Type: String
      Default: 10.0.2.0/24


Resources:

  VPC: 
      Type: AWS::EC2::VPC
      Properties:
          CidrBlock: !Ref VpcCIDR
          EnableDnsHostnames: true
          Tags: 
              - Key: Name 
                Value: !Ref EnvironmentName
                
  InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
          Tags:
              - Key: Name
                Value: !Ref EnvironmentName
          
  InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
          InternetGatewayId: !Ref InternetGateway
          VpcId: !Ref VPC

  PublicSubnet: 
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          CidrBlock: !Ref PublicSubnetCIDR
          MapPublicIpOnLaunch: true
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Public Subnet

  PrivateSubnet: 
      Type: AWS::EC2::Subnet
      Properties:
          VpcId: !Ref VPC
          CidrBlock: !Ref PrivateSubnetCIDR
          MapPublicIpOnLaunch: false
          Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Private Subnet

  NatGatewayEIP:
      Type: AWS::EC2::EIP
      DependsOn: InternetGatewayAttachment
      Properties: 
          Tags:
              - Key: Name
                Value: "Elastic IP for our NAT Gateway"

  NatGateway: 
      Type: AWS::EC2::NatGateway
      Properties: 
            AllocationId: !GetAtt NatGatewayEIP.AllocationId
            SubnetId: !Ref PublicSubnet

  PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
            VpcId: !Ref VPC
            Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Public Routes

  PrivateRouteTable:
      Type: AWS::EC2::RouteTable
      Properties: 
            VpcId: !Ref VPC
            Tags: 
              - Key: Name 
                Value: !Sub ${EnvironmentName} Private Routes

  PublicSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
            RouteTableId: !Ref PublicRouteTable
            SubnetId: !Ref PublicSubnet

  PrivateSubnetRouteTableAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
            RouteTableId: !Ref PrivateRouteTable
            SubnetId: !Ref PrivateSubnet

  DefaultPublicRoute: 
      Type: AWS::EC2::Route
      DependsOn: InternetGatewayAttachment
      Properties: 
            RouteTableId: !Ref PublicRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId: !Ref InternetGateway

  DefaultPrivateRoute:
      Type: AWS::EC2::Route
      Properties:
            RouteTableId: !Ref PrivateRouteTable
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId: !Ref NatGateway
    
Outputs: 

    VPC: 
        Description: A reference to the created VPC
        Value: !Ref VPC
        Export:
          Name: !Sub ${EnvironmentName}-VPCID

    PublicRouteTable:
        Description: Public Routing
        Value: !Ref PublicRouteTable
        Export:
          Name: !Sub ${EnvironmentName}-PUB-RT

    PrivateRouteTable:
        Description: Private Routing
        Value: !Ref PrivateRouteTable
        Export:
          Name: !Sub ${EnvironmentName}-PRI1-RT

    PublicSubnet:
        Description: Public Subnet
        Value: !Ref PublicSubnet
        Export:
          Name: !Sub ${EnvironmentName}-PUB-NETS

    PrivateSubnet:
        Description: Private Subnet
        Value: !Ref PrivateSubnet
        Export:
          Name: !Sub ${EnvironmentName}-PRIV-NETS
